Fix UI overflow bug

--- a/src/css/aside.css
+++ b/src/css/aside.css
@@ -5,6 +5,7 @@
   text-transform: capitalize;
   position: relative;
   background-color: #292929;
+  overflow-x: hidden;
 }
 .nav__button__ctn {
   display: flex;
