--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
 body {
   font-size: 2rem;
   height: 100%;
+  overflow: hidden;
 }
 ul,
 ol,
